--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2708,107 +2708,107 @@ stories:
   domain: http://www.crescent-news.com/
   link: https://www.crescent-news.com/on_the_wire/editors_pick/stocks-indexes-edge-higher-to-finish-off-a-wobbly-week/image_12acbea9-87ca-56e8-8567-c4fb17e65fb8.html
 images:
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-creativity.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-satan-red.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-satan-red.png
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit-4.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit-4.png
+- name: san-francisco-street-view-san-francisco-street-view-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-creativity.jpg
+- name: old-house-oldhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dark-soul.jpg
+- name: border-fence-border-fence-on-hill-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-smooth-ride.jpg
+- name: dc-statue-dcstatue-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alien-goggles.jpg
+- name: carry-load-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dali-three.jpg
+- name: fence-mexico-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-granite.jpg
+- name: nazi-invasion-DSC_0115.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0115.jpg
+- name: downtown-los-angeles-downtown-la-plentiful.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-plentiful.JPG
+- name: hollywood-building-hollywood-building-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-jap-wav-pr.jpg
+- name: ellis-island-ellis-island-room-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colored-circuits.jpg
+- name: blossombar-plentiful-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-plentiful-file-00-00-50-62.jpg
+- name: curtain-curtain-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-missle.jpg
+- name: birdhouse-birdhouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-aqua.jpg
+- name: gears-4882162452-fa3126b38d-b-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-blue-electricity.jpg
+- name: san-francisco-street-view-san-francisco-street-view-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-copper-circuit-2.jpg
+- name: crow-crow-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-smoking-cigarette.jpg
+- name: old-door-lock-old-door-lock-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-electricity.jpg
+- name: window-window-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-soul.jpg
+- name: legal-statue-legalstatue-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-creativity.jpg
+- name: old-church-oldchurch-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-really-hot.jpg
+- name: containership-containership-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-yellow-collage.jpg
+- name: store-on-corner-store-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-soul.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-constitution.jpg
+- name: containership-containership-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smoking-cigarette.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-monet-one.jpg
 - name: catacombs-catacombs-china-prop.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-china-prop.jpg
-- name: hollywood-building-hollywood-building-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-atari-asteroids.jpg
-- name: downtown-trucksilo-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-colored-circuits.jpg
-- name: old-church-oldchurch-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-monet-one.jpg
-- name: downtheline-downtheline-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dry-skin.jpg
-- name: carry-load-carryload-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-smoking-cigarette.jpg
-- name: oldtrain-oldtrain-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-atari-asteroids.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-colorful-dream.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-colorful-dream.JPG
-- name: liberty-back-statue-liberty-back-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-soul.jpg
-- name: power-lines-power-lines-empty-space-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-pond.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-colored-circuits.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-graham-sutherland.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-graham-sutherland.JPG
-- name: yuma-bank-yuma-bak-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-4.jpg
-- name: statue-of-liberty-front-view-statueofliberty-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-oily-mcoilface.jpg
-- name: locked-up-steam-lock-up-steam-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-atari-missle.jpg
-- name: trucksilo-trucksilo-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colorful-dream.jpg
-- name: beach-clouds-lifeguard-beachclouds-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-crafty-painting.jpg
-- name: beach-rocks-beach-rocks-currents-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-propaganda-leaflets.jpg
-- name: downtheline-downtheline-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-creativity.jpg
-- name: oldroad-old-road-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-alien-goggles.jpg
-- name: christianity-christianity-under-construction-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-umberto-bocc.jpg
-- name: locked-up-steam-lock-up-steam-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-monet-one.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-far-away.jpg
-- name: cyber-api-description-wars-api-specification-wars.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-api-specification-wars.png
-- name: catacombs-catacombs-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-really-hot.jpg
-- name: carry-load-carryload-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-internet-numbers.jpg
-- name: border-crossing-bordercrossing-dark-rain.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dark-rain.png
-- name: dragon_close-up-scream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-scream.jpg
-- name: razorcliff-razorcliff-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-smoking-cigarette.jpg
-- name: statue-of-liberty-front-view-statueofliberty-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-copper-circuit.jpg
-- name: downtheline-downtheline-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crabapple.jpg
-- name: wind-mills-windmills-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-aqua.jpg
-- name: oldcabin-store-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-sand-paper.jpg
-- name: bordercrossing-bordercrossing-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-satan-red.jpg
-- name: bluelake-blue-brush-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-00-00.jpg
-- name: oldroad-old-road-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-bright-sand.jpg
-- name: downtown-fredericksburg-kand-two.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-kand-two.JPG
-- name: dragon-desert-desert-dragon-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit.jpg
-- name: aws-s3-square-23-160-800-500-0-max-0--5--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-23-160-800-500-0-max-0--5--1-square.jpg
-- name: mistywoods-babyfoot-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crafty-painting.jpg
-- name: stories-shipping-energy-trucking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-shipping-energy-trucking.jpg
-- name: downtheline-downtheline-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crafty-painting.jpg
-- name: server-cloud-server-racks-clouds-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-kandinsky-bv.jpg
-- name: dc-statue-dcstatue-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-green-zuma.jpg
-- name: locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
-- name: aws-s3-bluelake-bluelake-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-bluelake-bluelake-still-600.jpg
-- name: hollywood-building-hollywood-building-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-hot-spicy.jpg
-- name: oldhousecars-house-old-cars-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-aqua.jpg
-- name: server-cloud-server-racks-door-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-purp-paper.jpg
-- name: bordercrossing-bordercrossing-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dali-two.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit.png
+- name: oldhotel-oldhotel-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-emily-carr.jpg
+- name: old-barn-old-barn-1500-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-deep-connections.jpg
+- name: ellis-island-ellisisland-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-graham-sutherland.jpg
+- name: flower-barbed-wire-flower-barbed-wire-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-monet-one.jpg
+- name: cargo-ship-cargo-ship-on-sea-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-circuit-4.jpg
+- name: mosaic-face-mosaic-face-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-satan-red.jpg
+- name: white-house-whitehouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dry-skin.jpg
+- name: berlinwall2-berlinwall-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-alien-goggles.jpg
+- name: aws-s3-smithriver-smithriver-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still.jpg
+- name: art-museum-art-museum-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-neo-instinct.jpg
+- name: abe-lincoln-one-purple-storm-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-07-91.jpg
+- name: adam-smith-adam-smith-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-oily-mcoilface.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-atari-missle.jpg
+- name: aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
+- name: school-clouds-church-clouds-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dali-three.jpg
+- name: fence-mexico-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-smoking-cigarette.jpg
+- name: border-crossing-bordercrossing-ww2-dresden.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-ww2-dresden.png
+- name: blossombar-creativity-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-00-00.jpg
+- name: status-berlin-status-berlin-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-propaganda-leaflets.jpg
+- name: copper-circuit-IMG_7072.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7072.jpg
+- name: nyc-flag-nycflag-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-electricity.jpg
+- name: abandonedbuildings_space_pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_space_pizza.jpg
 ---
 Faith Howe Named To The Deans List At Lincoln Memorial University.&nbsp;Its Never To Early For Some Football!.&nbsp;Life According To Tommy Chong.&nbsp;Mexico President Mixes Left, Conservative Policy In 1st Year.&nbsp;Idelson's Tenure At Hall Winds Down.&nbsp;Lutes Selected As Teacher Of The Year For Lennox School District.&nbsp;Legislature Sends Series Of Victims Rights Bills To Governors Desk.&nbsp;Weight Loss Support Groups.&nbsp;
